--- a/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
+++ b/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
@@ -6,13 +6,20 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
     <DocumentationFile>bin\Debug\netcoreapp2.1\TeamspeakAnalytics.hosting.xml</DocumentationFile>
+    <DefineConstants>TRACE;NETCOREAPP;NETCOREAPP2_1;DEBUG</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <DocumentationFile>bin\Release\netcoreapp2.1\TeamspeakAnalytics.hosting.xml</DocumentationFile>
+    <DefineConstants>TRACE;RELEASE;NETCOREAPP;NETCOREAPP2_1</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-
+    
   <ItemGroup>
+    <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.0" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
@@ -20,6 +27,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TeamspeakAnalytics.ts3provider\TeamspeakAnalytics.ts3provider.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
