Fixed swagger jwt auth

--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -10,7 +10,9 @@
     /*  */
     "UseHttps": false,
 
-    "SecurityKey": "dd%88*377f6d&f£$$£$ddddddFdddFF33fssDG^!3"
+    /* PrivateKey for jwt */
+    "SecurityKey": "dd%88*377f6d&f£$$£$adsdddddFdddFF33fssDG^!3"
+
   },
   "TeamspeakConfiguration": {
     "QueryUsername": "serveradmin",
