added minimal db implementation

--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -21,5 +21,8 @@
     "QueryPort": 10011,
     "ServerIndex": 1,
     "QueryReconnectTimeout": "00:01:00"
+  },
+  "ConnectionStrings": {
+    "ServiceDatabase": "Server=localhost;Database=TeamspeakAnalytics;User Id=admin;Password=admin;"
   }
 }
