--- a/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
+++ b/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
@@ -21,11 +21,13 @@
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2018.2.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.1.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TeamspeakAnalytics.database.mssql\TeamspeakAnalytics.database.mssql.csproj" />
     <ProjectReference Include="..\TeamspeakAnalytics.ts3provider\TeamspeakAnalytics.ts3provider.csproj" />
   </ItemGroup>
 
