--- a/.gitignore
+++ b/.gitignore
@@ -53,6 +53,7 @@ project.lock.json
 project.fragment.lock.json
 artifacts/
 #**/Properties/launchSettings.json
+appsettings.developement.json
 
 # StyleCop
 StyleCopReport.xml
