Made the analytics period configurable

--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -11,7 +11,10 @@
     "UseHttps": false,
 
     /* PrivateKey for jwt */
-    "SecurityKey": "dd%88*377f6d&f£$$£$adsdddddFdddFF33fssDG^!3"
+    "SecurityKey": "dd%88*377f6d&f£$$£$adsdddddFdddFF33fssDG^!3",
+
+    /* Run the analytics job again after a given period */
+    "AnalyticsPeriod": "00:01:00"
 
   },
   "TeamspeakConfiguration": {
