Improved logging added Aggregation job (needs to be implemented tho)

--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "System": "Warning",
+      "Microsoft": "Warning"
+    }
+  },
   "ServiceConfiguration": {
 
     /* If set to "0.0.0.0" the service will listen on all addresses and hostnames */
@@ -14,7 +21,10 @@
     "SecurityKey": "dd%88*377f6d&f£$$£$adsdddddFdddFF33fssDG^!3",
 
     /* Run the analytics job again after a given period */
-    "AnalyticsPeriod": "00:01:00"
+    "AnalyticsPeriod": "00:01:00",
+
+    /* Run the aggegation job again after a given period */
+    "AggregationPeriod": "01:00:00"
 
   },
   "TeamspeakConfiguration": {
