Added the external IP address to the getServerInfo response

--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -33,7 +33,8 @@
     "QueryHostname": "127.0.0.1",
     "QueryPort": 10011,
     "ServerIndex": 1,
-    "QueryReconnectTimeout": "00:01:00"
+    "QueryReconnectTimeout": "00:01:00",
+    "ExternalAdress" : "test.localhost"
   },
   "ConnectionStrings": {
     "ServiceDatabase": "Server=localhost;Database=TeamspeakAnalytics;User Id=admin;Password=admin;"
