--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,11 +6,14 @@ sonar.projectKey=TeamspeakAnalytics_hosting-and-backend
 # this is the name and version displayed in the SonarQube UI. Was mandatory prior to SonarQube 6.1.
 sonar.projectName=TeamspeakAnalytics_hosting-and-backend
 sonar.projectVersion=1.0
-sonar.language=csharp
+
+# CSharp
+sonar.dotnet.visualstudio.solution.file=TeamspeakAnalytics.hosting-and-backend.sln
+sonar.language=cs
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 # This property is optional if sonar.modules is set. 
-sonar.sources=src
+sonar.sources=.
  
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
