--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -34,7 +34,7 @@
     "QueryPort": 10011,
     "ServerIndex": 1,
     "QueryReconnectTimeout": "00:01:00",
-    "ExternalAdress" : "test.localhost"
+    "ExternalAddress" : "test.localhost"
   },
   "ConnectionStrings": {
     "ServiceDatabase": "Server=localhost;Database=TeamspeakAnalytics;User Id=admin;Password=admin;"
