--- a/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
+++ b/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
@@ -22,7 +22,7 @@
     
   <ItemGroup>
     <!-- It is not recommended to specefy the version of Microsoft.AspNetCore.All -->
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.2.8" />
+    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
