Fixed netcore 3.1 migration issues

--- a/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
+++ b/src/TeamspeakAnalytics.hosting/TeamspeakAnalytics.hosting.csproj
@@ -19,14 +19,14 @@
   <ItemGroup>
     <Folder Include="wwwroot\" />
   </ItemGroup>
-    
+
   <ItemGroup>
-    <!-- It is not recommended to specefy the version of Microsoft.AspNetCore.All -->
-    <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="JetBrains.Annotations" Version="2020.1.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer.Design" Version="1.1.6" />
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.3" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
   <ItemGroup>
