--- a/src/TeamspeakAnalytics.hosting/appsettings.json
+++ b/src/TeamspeakAnalytics.hosting/appsettings.json
@@ -37,6 +37,6 @@
     "ExternalAddress" : "test.localhost"
   },
   "ConnectionStrings": {
-    "ServiceDatabase": "Server=localhost;Database=TeamspeakAnalytics;User Id=admin;Password=admin;"
+    "ServiceDatabase": "Server=localhost;Database=TeamspeakAnalytics;Integrated Security=true;"
   }
 }
